# voxels-plus-plus

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.xml  main.cpp
test/: CMakeLists.txt  test_multidim.cpp  test_world.cpp
voxellib/: CMakeLists.txt  camera.cpp  camera.h  error.h  game.cpp  game.h  library.h  shader_loader.cpp  shader_loader.h  ui.cpp  util.cpp  util.h  world.cpp  world.h  world_renderer.cpp  world_renderer.h
voxellib/cmake/: FindGLEW.cmake  FindSDL2.cmake
voxellib/lib/: multidim_grid.hpp
voxellib/lib/imgui/: CMakeLists.txt  imgui_impl_opengl3.cpp
voxellib/procgen/: CMakeLists.txt
voxellib/procgen/python/: biome.py  pygen.py  requirements.txt
voxellib/procgen/src/: procgen.cpp  procgen.h
voxellib/res/shaders/: world.glslf  world.glslv
voxellib/src/: camera.cpp  camera.h  config.cpp  config.h  constants.h  error.h  game.cpp  game.h  game_entry.cpp  game_entry.h  multidim.h  shader_loader.cpp  shader_loader.h  ui.cpp  ui.h  util.cpp  util.h
voxellib/src/world/: block.cpp  block.h  centre.h  chunk.cpp  chunk.h  face.cpp  face.h  frustum.cpp  frustum.h  iterators.h  loader.cpp  loader.h  terrain.cpp  terrain.h  world.cpp  world.h  world_renderer.cpp  world_renderer.h
voxellib/src/world/chunk_load/: double_buffered.cpp  double_buffered.h  double_buffered_set.cpp  double_buffered_set.h  double_buffered_thread_safe_set.cpp  double_buffered_thread_safe_set.h  lookup.cpp  lookup.h  state.cpp  state.h
voxellib/src/world/generation/: generator.cpp  generator.h
voxellib/threadpool/: CMakeLists.txt  main.cpp  threadpool.cpp  threadpool.h
voxellib/world/: block.h  centre.h  chunk.cpp  chunk.h  face.cpp  face.h  world.cpp  world.h  world_renderer.cpp  world_renderer.h
